--- a/ueventd.common.rc
+++ b/ueventd.common.rc
@@ -10,3 +10,4 @@ subsystem usbmisc
 /dev/nanohub_comms        0660   system     system
 /dev/hifi_misc   0666 system audio
 /dev/ttyACM0     0660 gps system
+/dev/ttyUSB0     0666 system system
