Add SWId for sensors mezzanine based steering wheel interface
Change-Id: Ia8f8432841abe7ebe3f217f6976301e9e3589ae0

--- a/init.common.rc
+++ b/init.common.rc
@@ -92,6 +92,12 @@ service uim /vendor/bin/uim
     group bluetooth net_bt_admin system
     oneshot
 
+service swid /system/bin/swid
+    class main
+    user bluetooth
+    group system
+    oneshot
+
 service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant \
      -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
      -g@android:wpa_wlan0
