Make swid and broadcastradio-hal start on boot
These are permission and sepolicy changes.

Change-Id: I645525cc566dd3a5c42cb7e936c2d4ab0ecf7e60

--- a/init.common.rc
+++ b/init.common.rc
@@ -94,8 +94,8 @@ service uim /vendor/bin/uim
 
 service swid /system/bin/swid
     class main
-    user bluetooth
-    group system
+    user system
+    group bluetooth
     oneshot
 
 service wpa_supplicant /system/vendor/bin/hw/wpa_supplicant \
