Give swid the permissions it needs to work in /dev/
Change-Id: I7bf9a4aa166f9435354cb6b40bfea9a8012444f1

--- a/init.common.rc
+++ b/init.common.rc
@@ -94,7 +94,7 @@ service uim /vendor/bin/uim
 
 service swid /system/bin/swid
     class main
-    user system
+    user root
     group bluetooth
     oneshot
 
